[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.45.2",
    "beautifulsoup4>=4.12.3",
    "pandas>=2.2.3",
    "pypdf2>=3.0.1",
    "requests>=2.32.3",
    "streamlit>=1.41.1",
    "trafilatura>=2.0.0",
]
